--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ appdirs==1.4.3
 appnope==0.1.0
 backports-abc==0.5
 backports.shutil-get-terminal-size==1.0.0
+bash-kernel==0.6
 bleach==2.0.0
 certifi==2017.1.23
 cffi==1.9.1
